--- a/svc/index.html
+++ b/svc/index.html
@@ -501,26 +501,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre1_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre1_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre1_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -539,26 +530,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre2_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre2_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre2_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -567,26 +549,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre2_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre2_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre2_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -595,26 +568,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre2_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre2_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre2_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -623,26 +587,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre2_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre2_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre2_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -661,26 +616,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre3_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre3_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre3_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -689,26 +635,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre3_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre3_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre3_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -717,26 +654,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre3_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre3_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre3_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
@@ -745,26 +673,17 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre3_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre3_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source
-                      src="path/to/freevc_timbre3_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
