--- a/svc/index.html
+++ b/svc/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>R2-SVC Demo Page</title>
+    <title>Demo Page of R2-SVC</title>
     <link rel="stylesheet" href="demo.css" />
   </head>
   <body>
@@ -530,7 +530,7 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source src="audios/老年女_hard_001.mp3" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
@@ -549,17 +549,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_ours_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_ours_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_ours_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -568,17 +577,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_seedvc_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_seedvc_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_seedvc_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -587,17 +605,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_freevc_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_freevc_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/老年女2_hard_freevc_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
