--- a/svc/index.html
+++ b/svc/index.html
@@ -535,12 +535,12 @@
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source src="audios/老年女_hard_002.mp3" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source src="audios/老年女_hard_003.mp3" type="audio/wav" />
                   </audio>
                 </div>
               </div>
