--- a/svc/index.html
+++ b/svc/index.html
@@ -444,17 +444,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_001.mp3"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_002.mp3"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_003.mp3"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -463,17 +472,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_ours_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_ours_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_ours_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -482,17 +500,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_seedvc_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_seedvc_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_seedvc_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -501,17 +528,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_freevc_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_freevc_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年活力女_hard_freevc_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
