--- a/svc/index.html
+++ b/svc/index.html
@@ -679,17 +679,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_001.mp3"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_002.mp3"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_003.mp3"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -698,17 +707,26 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_ours_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_ours_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_ours_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -717,12 +735,18 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_seedvc_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_seedvc_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
@@ -736,12 +760,18 @@
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_freevc_001.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_freevc_002.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
                 <div class="vocal-item">
