--- a/svc/index.html
+++ b/svc/index.html
@@ -724,7 +724,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="audios/青年解说男_hard_ours_002.wav"
+                      src="audios/青年解说男_hard_ours_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -751,7 +751,10 @@
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_seedvc_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
@@ -776,7 +779,10 @@
                 </div>
                 <div class="vocal-item">
                   <audio controls>
-                    <source src="audios/zhanwei.wav" type="audio/wav" />
+                    <source
+                      src="audios/青年解说男_hard_freevc_003.wav"
+                      type="audio/wav"
+                    />
                   </audio>
                 </div>
               </div>
