--- a/svc/index.html
+++ b/svc/index.html
@@ -392,7 +392,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="audios/贾斯汀比伯_normal_seedvc_001.wav"
+                      src="audios/贾斯汀比伯_normal_freesvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -400,7 +400,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="audios/贾斯汀比伯_normal_seedvc_001.wav"
+                      src="audios/贾斯汀比伯_normal_freesvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -408,7 +408,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="audios/贾斯汀比伯_normal_seedvc_001.wav"
+                      src="audios/贾斯汀比伯_normal_freesvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
