--- a/svc/index.html
+++ b/svc/index.html
@@ -70,8 +70,8 @@
               <div class="timbre-column"></div>
               <div class="method-column">Original Vocal</div>
               <div class="method-column">R2-SVC</div>
-              <div class="method-column">Seed-VC</div>
-              <div class="method-column">FreeSVC</div>
+              <div class="method-column">Seed-VC [1]</div>
+              <div class="method-column">FreeSVC [2]</div>
             </div>
 
             <!-- Timbre 1 Row -->
@@ -797,16 +797,16 @@
           <div class="reference-item">
             <span class="reference-number">[1]</span>
             <span class="reference-text">
-              Alef Iury Ferreira, Lucas Rafael Gris, Augusto Da Rosa, et al.,
-              "Freesvc: Towards zero-shot multilingual singing voice
-              conversion," in <em>ICASSP</em>, 2025, pp. 1–5.
+              Songting Liu, "Zero-shot voice conversion with diffusion
+              transformers," <em>arXiv preprint arXiv:2411.09943</em>, 2024.
             </span>
           </div>
           <div class="reference-item">
             <span class="reference-number">[2]</span>
             <span class="reference-text">
-              Songting Liu, "Zero-shot voice conversion with diffusion
-              transformers," <em>arXiv preprint arXiv:2411.09943</em>, 2024.
+              Alef Iury Ferreira, Lucas Rafael Gris, Augusto Da Rosa, et al.,
+              "Freesvc: Towards zero-shot multilingual singing voice
+              conversion," in <em>ICASSP</em>, 2025, pp. 1–5.
             </span>
           </div>
         </div>
